fixed scrollbar menu products

--- a/src/index.css
+++ b/src/index.css
@@ -39,54 +39,68 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  *, *::after, *::before {  
-    box-sizing: border-box;  
-    margin: 0;  
-    padding: 0;  
-  }  
+  *,
+  *::after,
+  *::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "morabba_light";
+  }
 
-  body, #root {  
-    @apply w-full bg-primary_lighteen dark:bg-primary_darken;  
-    direction: rtl;  
-    font-family: "dana_light", "morabba_light";  
+  body,
+  #root {
+    @apply w-full bg-primary_lighteen dark:bg-primary_darken;
+    direction: rtl;
+    font-family: "dana_light", "morabba_light";
     line-height: normal;
   }
 }
-.ant-menu-submenu-title{
+.ant-menu-submenu-title {
   padding-right: 0;
 }
 
-/* Custom scrollbar styles */  
-.scrollbar-thumb {  
-  @apply bg-gray-500 rounded; /* Customize the draggable part of the scrollbar */  
-}  
+/* Custom scrollbar styles */
+.scrollbar-thumb {
+  @apply bg-gray-500 rounded; /* Customize the draggable part of the scrollbar */
+}
 
-.scrollbar-thumb:hover {  
-  @apply bg-gray-600; /* Change color on hover */  
-}  
+.scrollbar-thumb:hover {
+  @apply bg-gray-600; /* Change color on hover */
+}
 
-.scrollbar-track {  
-  @apply bg-gray-200; /* Customize track */  
-}  
+.scrollbar-track {
+  @apply bg-gray-200; /* Customize track */
+}
 
-/* Apply scrollbar in a component */  
-.scrollbar {  
-  scrollbar-width: thin; /* For Firefox */  
-}  
+/* Apply scrollbar in a component */
+.scrollbar {
+  scrollbar-width: thin; /* For Firefox */
+}
 
-.scrollbar::-webkit-scrollbar {  
-  width: 8px; /* Width of the scrollbar */  
-}  
+.scrollbar::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
 
-.scrollbar::-webkit-scrollbar-thumb {  
-  @apply bg-gray-500; /* Custom scrollbar thumb */  
-  border-radius: 4px;  
-}  
+.scrollbar::-webkit-scrollbar-thumb {
+  @apply bg-gray-500; /* Custom scrollbar thumb */
+  border-radius: 4px;
+}
 
-.scrollbar::-webkit-scrollbar-thumb:hover {  
-  @apply bg-gray-600;  
-}  
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-600;
+}
 
-.scrollbar::-webkit-scrollbar-track {  
-  @apply bg-gray-200; /* Custom scrollbar track */  
-} 
+.scrollbar::-webkit-scrollbar-track {
+  @apply bg-gray-200; /* Custom scrollbar track */
+}
+/* .ant-menu-submenu-title {
+  position: sticky !important;
+  top: 0 !important;
+  background-color: white;
+} */
+ul.ant-menu.ant-menu-sub.ant-menu-inline {
+  max-height: 250px;
+  overflow: auto;
+  scrollbar-width: thin; /* For Firefox */
+}
